# learning-ai

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-dev.md  code-reviewer.md  frontend-dev.md
.claude/skills/docs-audit/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/llm-wiki/: SKILL.md
.devcontainer/: Dockerfile
.devcontainer/claude/: devcontainer.json
.devcontainer/codex/: devcontainer.json
cnn/: cnn_konspekt.html  cnn_mnist.py
docs/: INDEX.md
docs/plans/: glimmering-purring-stearns.md
local-llm-lab/: NOTES.md  main.py
obsidian-mcp/: server.py
